add color updates replace dummy text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="second-container">
         <div class="second-header">
-            <h2>Some random information.</h2>
+            <h2>My favorite adaptations:</h2>
         </div>
         <div class="all-tanks">
             <div class="tank"> 
@@ -62,13 +62,13 @@
     </div>
     <div class="third-container">
         <div class="quote-block">
-            <p>This is an inspiring quote, or a testimonial from a 
-                customer. Maybe it's just filling up space, or maybe 
-                people will actually read it. Who knows? All I know 
-                is that it looks nice. </p>
+            <p>"Business! Mankind was my business. The common welfare was my business; 
+                charity, mercy, forbearance, and benevolence, were, all, my business.  
+                The dealings of my trade were but a drop of water in the comprehensive ocean of my business!"
+            </p>
         </div>
         <div class="signature">
-            <h1>-Thor, God of Thunder </h1>
+            <h1>-Marley's Ghost</h1>
         </div>
     </div>
     <div class="fourth-container">
