--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
 
     </div>
     <div class="footer">
-        <p>Copyright &copy; The Odin Project 2022</p>
+        <p>Copyright &copy; The Odin Project 
+            <script>
+            document.write(new Date().getFullYear())
+          </script>
+        </p>
     </div>
 </body>
 </html>
