--- a/index.html
+++ b/index.html
@@ -84,11 +84,19 @@
 
     </div>
     <div class="footer">
-        <p>Copyright &copy; The Odin Project 
-            <script>
+        <p>Copyright &copy; 
+        <script>
             document.write(new Date().getFullYear())
-          </script>
+        </script>
+        <a href="https://github.com/Elegant-Geek" target="_blank"><strong>Elegant-Geek</strong></a>
         </p>
+    </p> 
+    <div class="social-media-container">
+        <a href="https://www.facebook.com/American1diot/"><img height="30" src="./images/facebook-app.png"/></a>
+           <a href="https://www.instagram.com/heychickenhead/"><img height="30" src="./images/ig-instagram.png"/></a>
+           <a href="https://www.linkedin.com/in/clark-jamie/"><img height="30" src="./images/linkedin-app.png"/></a>
+           <a href="https://github.com/Elegant-Geek"><img height="30" src="./images/gh.png"/></a>
+    </div>
     </div>
 </body>
 </html>
