--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header">
             <!-- HEADER IMAGE LOGO FILL-IN (CSS contains the predetermined height and width) -->
             <!-- <a href="./index.html"><img src="images/header-logo.png" alt="logo"></a> -->
-            <h3>Header Logo</h3>
+            <h3>Marley's Ghost</h3>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -32,7 +32,7 @@
             </div>
             <div class="right-hero">
                 <!-- IMAGE HERE -->
-                <img src="./images/placeholder.jpg" alt="big-image">
+                <iframe width="450" height="253.125" src="https://www.youtube.com/embed/kdTJkqZ9N9Q?start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </div>
