add youtube video and lots of links

--- a/index.html
+++ b/index.html
@@ -7,55 +7,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home: Marley's Ghost</title>
 <!-- Baskerville FONT -->
+<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<!-- NOTE: if pointer doesn't show up over links and buttons, you just pause the add blocker and refresh the page! -->
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="first-container">
         <div class="header">
             <!-- HEADER IMAGE LOGO FILL-IN (CSS contains the predetermined height and width) -->
             <!-- <a href="./index.html"><img src="images/header-logo.png" alt="logo"></a> -->
-            <h3>Marley's Ghost</h3>
+            <h3><a href="#">Marley's Ghost</a></h3>
             <ul>
                 <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="https://christmas-specials.fandom.com/wiki/Jacob_Marley">Wiki</a></li>
+                <li><a href="https://discord.gg/cDecjht3Gt">Discord</a></li>
             </ul>
         </div>
         <div class="both-heroes">
             <div class="left-hero">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button><a href="#">Sign up</a></button>
+                <h1>Scrooge: A Christmas Carol</h1>
+                <p>The newest take on Dickens' classic is on Netflix! Watch a short clip of it here or go watch the whole thing!</p>
+                <button><a href="https://www.netflix.com/title/81028225">Take me there!</a></button>
             </div>
             <div class="right-hero">
-                <iframe width="450" height="253.125" src="https://www.youtube.com/embed/kdTJkqZ9N9Q?start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="450" height="253.125" src="https://www.youtube.com/embed/kdTJkqZ9N9Q?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </div>
     <div class="second-container">
         <div class="second-header">
-            <h2>My favorite adaptations:</h2>
+            <h2>Notable adaptations:</h2>
         </div>
         <div class="all-tanks">
-            <div class="tank"> 
-                <img src="images/placeholder.jpg" alt="ghost-1">
+            <div class="tank"> <a href="https://www.netflix.com/title/81028225"><img src="images/placeholder.jpg" alt="ghost-1"></a>
                 <!-- TIP! border radius to chop off corners of images in the tank by using .tank img in css -->
-                <p>This is some subtext under an illustration or image.</p>
+                <p>Probably the coolest design and most likeable version in recent memory. They turned him into an ice king (2022).</p>
             </div>
             <div class="tank"> 
-                <img src="images/placeholder.jpg" alt="ghost-2">
-                <p>This is some subtext under an illustration or image.</p>
+                <a href="https://www.disneyplus.com/movies/disneys-a-christmas-carol/QnakzyiFzOeP">
+                    <img src="images/placeholder.jpg" alt="ghost-2">
+                </a>
+                <p>The spookiest, true-to-book version out there. Played by Gary Oldman my beloved (2009).</p>
             </div>
             <div class="tank"> 
-                <img src="images/placeholder.jpg" alt="ghost-3">
-                <p>This is some subtext under an illustration or image.</p>
+                <a href="https://watch.plex.tv/movie/a-christmas-carol?autoplay=1&utm_content=5dca6a2ee85450001f7e4126&utm_medium=deeplink&utm_source=google-catalog">                
+                    <img src="images/placeholder.jpg" alt="ghost-3">
+                </a>
+                <p>My favorite live action performance by Frank Finlay. Absolutely Shakespearean (1984).</p>
             </div>
             <div class="tank"> 
-                <img src="images/placeholder.jpg" alt="ghost-4">
-                <p>This is some subtext under an illustration or image.</p>
+                <a href="https://atmosfx.com/products/marleys-ghost">
+                    <img src="images/placeholder.jpg" alt="ghost-4">
+                </a>
+                <p>A digital Halloween projection from AtmosFX that really does him right.</p>
             </div>
         </div>
     </div>
@@ -73,11 +80,11 @@
     <div class="fourth-container">
         <div class="blue-notice">
             <div>
-                <h1>Call to action! It's time!</h1>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h1>Hear me! My time is nearly gone.</h1>
+                <p>Before you go, check out Stave One complete with audio here. </p>
             </div>
             <div>
-                <button><a href="#">Sign up</a></button>
+                <button><a href="https://etc.usf.edu/lit2go/160/a-christmas-carol/2824/stave-i/">Ye gods!</a></button>
             </div>
         </div>
 
@@ -91,10 +98,10 @@
         </p>
     </p> 
     <div class="social-media-container">
-        <a href="https://www.facebook.com/American1diot/"><img height="30" src="./images/facebook-app.png"/></a>
-        <a href="https://www.instagram.com/heychickenhead/"><img height="30" src="./images/ig-instagram.png"/></a>
-        <a href="https://www.linkedin.com/in/clark-jamie/"><img height="30" src="./images/linkedin-app.png"/></a>
-        <a href="https://github.com/Elegant-Geek"><img height="30" src="./images/gh.png"/></a>
+        <a href="https://www.facebook.com/American1diot/"><img height="40" src="./images/facebook-app.png"/></a>
+        <a href="https://www.instagram.com/heychickenhead/"><img height="40" src="./images/ig-instagram.png"/></a>
+        <a href="https://www.linkedin.com/in/clark-jamie/"><img height="40" src="./images/linkedin-app.png"/></a>
+        <a href="https://github.com/Elegant-Geek"><img height="40" src="./images/gh.png"/></a>
     </div>
     </div>
 </body>
