--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <!-- <a href="./index.html"><img src="images/header-logo.png" alt="logo"></a> -->
             <h3><a href="#">Marley's Ghost</a></h3>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="https://christmas-specials.fandom.com/wiki/Jacob_Marley">Wiki</a></li>
-                <li><a href="https://discord.gg/cDecjht3Gt">Discord</a></li>
+                <li><a href="https://christmas-specials.fandom.com/wiki/Jacob_Marley" target="_blank">Wiki</a></li>
+                <li><a href="https://discord.gg/cDecjht3Gt" target="_blank">Discord</a></li>
+                <li><a href="https://github.com/Elegant-Geek/a-christmas-carol-site" target="_blank">Site Code</a></li>
             </ul>
         </div>
         <div class="both-heroes">
             <div class="left-hero">
                 <h1>Scrooge: A Christmas Carol</h1>
-                <p>The newest take on Dickens' classic is on Netflix! Watch a short clip of it here or go watch the whole thing!</p>
-                <button><a href="https://www.netflix.com/title/81028225">Take me there!</a></button>
+                <p>The newest take on Dickens' beloved classic is on Netflix! Watch a short clip of it here, or go watch the whole thing.</p>
+                <button><a href="https://www.netflix.com/title/81028225" target="_blank">Take me there!</a></button>
             </div>
             <div class="right-hero">
                 <iframe width="450" height="253.125" src="https://www.youtube.com/embed/kdTJkqZ9N9Q?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -42,27 +42,27 @@
             <h2>Notable adaptations:</h2>
         </div>
         <div class="all-tanks">
-            <div class="tank"> <a href="https://www.netflix.com/title/81028225"><img src="images/placeholder.jpg" alt="ghost-1"></a>
+            <div class="tank"> <a href="https://www.netflix.com/title/81028225" target="_blank"><img src="./images/2022-version.png" alt="Marley from the 2022 animation"></a>
                 <!-- TIP! border radius to chop off corners of images in the tank by using .tank img in css -->
-                <p>Probably the coolest design and most likeable version in recent memory. They turned him into an ice king (2022).</p>
+                <p>Probably the coolest design and most likeable version in recent memory. He's an ice king! (2022)</p>
             </div>
             <div class="tank"> 
-                <a href="https://www.disneyplus.com/movies/disneys-a-christmas-carol/QnakzyiFzOeP">
-                    <img src="images/placeholder.jpg" alt="ghost-2">
+                <a href="https://www.disneyplus.com/movies/disneys-a-christmas-carol/QnakzyiFzOeP" target="_blank">
+                    <img src="./images/2009-version.jpg" alt="Marley from the 2009 animation">
                 </a>
-                <p>The spookiest, true-to-book version out there. Played by Gary Oldman my beloved (2009).</p>
+                <p>The spookiest, true-to-book version out there. Played by Gary Oldman my beloved. (2009)</p>
             </div>
             <div class="tank"> 
-                <a href="https://watch.plex.tv/movie/a-christmas-carol?autoplay=1&utm_content=5dca6a2ee85450001f7e4126&utm_medium=deeplink&utm_source=google-catalog">                
-                    <img src="images/placeholder.jpg" alt="ghost-3">
+                <a href="https://watch.plex.tv/movie/a-christmas-carol?autoplay=1&utm_content=5dca6a2ee85450001f7e4126&utm_medium=deeplink&utm_source=google-catalog" target="_blank">                
+                    <img src="./images/1984-version.jpg" alt="Marley from the 1984 live action">
                 </a>
-                <p>My favorite live action performance by Frank Finlay. Absolutely Shakespearean (1984).</p>
+                <p>Frank Finlay's version is my favorite live action Shakespearean performance.  (1984)</p>
             </div>
             <div class="tank"> 
-                <a href="https://atmosfx.com/products/marleys-ghost">
-                    <img src="images/placeholder.jpg" alt="ghost-4">
+                <a href="https://atmosfx.com/products/marleys-ghost" target="_blank">
+                    <img src="./images/atmosfx.png" alt="Marley from AtmosFX">
                 </a>
-                <p>A digital Halloween projection from AtmosFX that really does him right.</p>
+                <p>A super cool Halloween projection from AtmosFX that really does him right. (2020)</p>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
                 <p>Before you go, check out Stave One complete with audio here. </p>
             </div>
             <div>
-                <button><a href="https://etc.usf.edu/lit2go/160/a-christmas-carol/2824/stave-i/">Ye gods!</a></button>
+                <button><a href="https://etc.usf.edu/lit2go/160/a-christmas-carol/2824/stave-i/" target="_blank">Ye gods!</a></button>
             </div>
         </div>
 
@@ -98,10 +98,10 @@
         </p>
     </p> 
     <div class="social-media-container">
-        <a href="https://www.facebook.com/American1diot/"><img height="40" src="./images/facebook-app.png"/></a>
-        <a href="https://www.instagram.com/heychickenhead/"><img height="40" src="./images/ig-instagram.png"/></a>
-        <a href="https://www.linkedin.com/in/clark-jamie/"><img height="40" src="./images/linkedin-app.png"/></a>
-        <a href="https://github.com/Elegant-Geek"><img height="40" src="./images/gh.png"/></a>
+        <a href="https://www.facebook.com/American1diot/" target="_blank"><img height="40" src="./images/facebook-app.png"/></a>
+        <a href="https://www.instagram.com/heychickenhead/" target="_blank"><img height="40" src="./images/ig-instagram.png"/></a>
+        <a href="https://www.linkedin.com/in/clark-jamie/" target="_blank"><img height="40" src="./images/linkedin-app.png"/></a>
+        <a href="https://github.com/Elegant-Geek" target="_blank"><img height="40" src="./images/gh.png"/></a>
     </div>
     </div>
 </body>
